--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,11 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'style/style.css' %}" rel="stylesheet">
     <title>WorkConnect</title>
 </head>
 <body>
-    <h1>Teste Base Template</h1>
+    <aside>
+        <nav>
+            <a href="{% url 'index' %}">
+                <img src="{% static 'img/logo.png' %}">
+            </a>
+            <div class="content">
+                <div class="first-group">
+                    <div id="notification-box" class="aside-nav-box">
+                        <i class="fa-solid fa-bell"></i>
+                    </div>
+                    <a class="aside-nav-box" href="#">
+                        <i class="fa-solid fa-comment-dots"></i>
+                    </a>
+                    <a class="aside-nav-box" href="#">
+                        <i class="fa-solid fa-calendar"></i>
+                    </a>
+                </div>
+                <div class="last-group">
+                    <a class="aside-nav-box" href="#">
+                        <i class="fa-solid fa-user"></i>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </aside>
+    <div class="container">
+        <div class="row header-top">
+            <div class="col-8">
+                <h2>Nome Empresa</h2>
+            </div>
+            <div class="col">
+                <form id="search-form">
+                    <input name="search" id="search" type="text" placeholder="Pesquisar no WorkConnect">
+                    <select name="search-target" id="search-target">
+                        <option value="messages" selected>Mensagem</option>
+                        <option value="posts">Postagens</option>
+                        <option value="peoples">Pessoas</option>
+                    </select>
+                    <button type="submit"></button>
+                </form>
+            </div>
+        </div>
     {% block content %}
     {% endblock %}
+    <footer>
+        <span><b>WorkConnect</b></span>
+        <p>Breve mais informações</p>
+    </footer>
+    <script src="https://kit.fontawesome.com/c6e63ec5a7.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
