--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,5 +1,88 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h2>Teste content</h2>
+    <div class="row">
+        <div class="col-8">
+            <div class="row">
+                <div class="col">
+                    <section id="updates-notification">
+                        <i class="fa-solid fa-newspaper"></i>
+                        <div>
+                            <h2><b>Novas Atualizações</b></h2>
+                            <p>Enquanto você esteve fora, tivemos <b>17</b> novas Atualizações</p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <section id="feed-ordenator">
+                        <div>
+                            <h4><b>Feed</b></h4>
+                            <p>Veja publicações relevantes da sua organização</p>
+                        </div>
+                        <div id="ordenator-list">
+                            <form>
+                                <span>Classificar por</span>
+                                <select name="ordenator" id="ordenator">
+                                    <option value="most-relevant" selected>Mais Relevantes</option>
+                                    <option value="most-recent">Mais Recentes</option>
+                                </select>
+                            </form>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <section id="posts">
+                        {% include 'acessories/post.html' %}
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="row">
+                <section id="aside-content">
+                    <div id="suggest-header">
+                        <h3>Sugestão de Grupos Públicos</h3>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div id="group-suggestions">
+                        <div class="group-suggest">
+                            <div class="cover" style="background: url('{% static 'img/cover_test.jpg' %}');"></div>
+                            <div class="content">
+                                <a href="#">
+                                    <h5>Grupo Projeto WorkConnect</h5>
+                                </a>
+                                <div>
+                                    <form>
+                                        <button>Participar</button>
+                                    </form>
+                                    <span>Público | 15 Membros</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Sugestão de Pessoas</h3>
+                    <div id="people-suggestions">
+                        <div class="people-suggest">
+                            <div class="profile">
+                                <div class="profile-image">
+                                    <img src="{% static 'img/agostinho.jpeg' %}" alt="Foto de perfil">
+                                </div>
+                                <div class="profile-user-title">
+                                    <span><b><a href="#">{{ user.first_name}} {{ user.last_name}}</a></b></span>
+                                    <span class="post-role">Project Management</span>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-user-plus"></i>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+<!--End Main Container-->
+</div>
 {% endblock %}
