--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,15 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Workconnect | Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'style/style.css' %}" rel="stylesheet">
+    <title>WorkConnect | Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form method="post" action="">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
+    <div class="container login-container">
+        <div class="row">
+            <div class="col">
+                <div id="login-box">
+                    <div class="content">
+                        <img src="{% static 'img/logo.png' %}">
+                        <h1>Faça Login para começar</h1>
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit">Fazer Login</button>
+                        </form>
+                        <p>Ao fazer login você concorda com os termos de licença e uso</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
