Transformando Auth para JWT c/ cookies + APIs(Login/Logout/Refresh) + ProfileView

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div class="last-group">
-                    <a class="aside-nav-box" href="#">
+                    <a class="aside-nav-box" href="{% url 'profile' %}">
                         <i class="fa-solid fa-user"></i>
                     </a>
                 </div>
