--- a/core/static/style/style.css
+++ b/core/static/style/style.css
@@ -174,6 +174,9 @@ aside{
         & form{
             width: 100%;
             text-align: justify;
+            & input{
+                margin-bottom: 10px;
+            }
             & button{
                 background-color: var(--light-blue);
                 font-weight: 500;
