--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -16,9 +16,10 @@
                     <div class="content">
                         <img src="{% static 'img/logo.png' %}">
                         <h1>Faça Login para começar</h1>
-                        <form method="post" action="">
+                        <form method="get" id="login-form" action="index">
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            <input type="email" name="email" id="email" placeholder="Digite seu E-mail" required>
+                            <input type="password" name="password" id="password" placeholder="Digite sua senha" required>
                             <button type="submit">Fazer Login</button>
                         </form>
                         <p>Ao fazer login você concorda com os termos de licença e uso</p>
@@ -27,5 +28,6 @@
             </div>
         </div>
     </div>
+    <script src="{% static 'scripts/login-script.js' %}"></script>
 </body>
 </html>
