--- a/core/static/style/style.css
+++ b/core/static/style/style.css
@@ -16,6 +16,7 @@
 body{
     background-color: #E0E1DD;
     color: var(--black);
+    scroll-behavior: smooth;
 
     & input{
         width: 100%;
@@ -76,6 +77,7 @@ aside{
     height: 100vh;
     position: fixed;
     top: 0;
+    
     & nav{
         height: 100vh;
         display: flex;
@@ -128,6 +130,114 @@ aside{
             margin: 0 auto;
             margin-top: 30px;
         }
+    }
+}
+
+.aside-opened{
+    width: 600px;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    z-index: 1;
+
+    & nav{
+        width: 129px;
+        border-right: 5px solid var(--white);
+    }
+
+    #aside-opened-list{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding: 30px;
+
+        & #close-aside{
+            align-self: flex-end;
+            color: var(--white);
+            cursor: pointer;
+            font-size: 1.5em;
+        }
+
+        & .content{
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            max-height: 100%;
+            overflow-y: scroll;
+            /* scrollbar-width: thin;
+            scrollbar-color: transparent transparent; */
+
+            & h5{
+                color: var(--white);
+                font-weight: 400;
+            }
+            
+            & #not-readed-messages, #readed-messages{
+                margin-right: 5px;
+                & span{
+                    color: var(--silver);
+                }
+
+                & .notification{
+                    display: flex;
+                    align-items: center;
+                    gap: 15px;
+                    color: var(--white);
+                    border-bottom: 1px solid var(--silver);
+                    margin: 0;
+                    padding: 10px 0;
+                    width: 100%;
+                    cursor: pointer;
+
+
+                    & i{
+                        font-size: .5em;
+                        color: var(--red);
+                    }
+
+                    & div{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        gap: 5px;
+
+                        & p{
+                            margin: 0;
+                            padding: 0;
+                        }
+
+                        & .notification-time{
+                            font-size: .9em;
+                            font-weight: 500;
+                            color: var(--light-silver);
+                        }
+                    }
+                }
+            }
+
+            & #readed-messages{
+                margin-top: 30px;
+                & p, i{
+                    color: var(--silver) !important;
+                }
+            }
+        }
+
+        & .content::-webkit-scrollbar {
+            width: 6px;
+        }
+        
+        & .content::-webkit-scrollbar-track {
+            background: transparent; 
+        }
+        
+        & .content::-webkit-scrollbar-thumb {
+            background: var(--silver);
+            border-radius: 10px;
+        }
+        
     }
 }
 
@@ -481,6 +591,227 @@ aside{
                 color: #415A77;
                 font-size: 1.5em;
                 cursor: pointer;
+            }
+        }
+    }
+}
+
+#chat-peoples{
+    background-color: var(--white);
+    box-shadow: 0px 8px 27px -13px rgba(0,0,0,0.1);
+    padding: 30px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    min-height: 550px;
+
+    & form{
+        width: 100%;
+
+        & input{
+            width: 100%;
+            border-radius: 25px;
+        }
+    }
+
+    & h3{
+        font-size: 1.3em;
+        font-weight: 400;
+        color: var(--gray);
+        margin: 0;
+        padding: 0;
+    }
+
+    & .chat{
+        cursor: pointer;
+        transition: .2s;
+        padding: 5px;
+
+        & hr{
+            margin: 5px 0;
+        }
+
+        & .profile-image{
+            width: 60px;
+            
+            & .online{
+                border: 2px solid green;
+            }
+            & .offline{
+                border: 2px solid var(--gray);
+            }
+        }
+
+        & .profile-user-title{
+            width: 100%;
+            & .header-message{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+
+                & .more-chat-options{
+                    cursor: pointer;
+                    display: none;
+                    transition: .5s;
+                }
+            }
+            
+            & .last-message{
+                display: flex;
+                justify-content: space-between;
+            }
+        }
+    }
+
+    & .chat:hover{
+        background-color: var(--silver);
+
+        & .profile-user-title{
+            & .header-message{
+                & .more-chat-options{
+                    display: block;
+                }
+            }
+        }
+    }
+}
+
+#chat-content{
+    background-color: var(--white);
+    box-shadow: 0px 8px 27px -13px rgba(0,0,0,0.1);
+    /* padding: 30px; */
+    padding: 0;
+    border-radius: 25px;
+    min-height: 550px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    & #header-chat{
+        background-color: var(--light-blue);
+        width: 100%;
+        border-radius: 25px 25px 0 0;
+        padding: 15px 30px;
+        color: var(--white);
+
+        & .profile{
+            width: 100%;
+        }
+        & .profile-image{
+            width: 50px;
+        }
+
+        & .profile-user-title{
+            width: 100%;
+
+            & .header-message{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 100%;
+
+                & i{
+                    cursor: pointer;
+                    color: var(--silver);
+                }
+            }
+        }
+    }
+
+    & #content-chat{
+        padding: 0 30px;
+        height: 100%;
+
+        & .message-line-received{
+            padding: 10px 0;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            max-width: 600px;
+
+            & .profile-image{
+                width: 40px;
+            }
+        }
+
+        & .message-content-box{
+            background-color: var(--silver);
+            padding: 5px 10px;
+            display: flex;
+            gap: 20px;
+            border-radius: 10px 0 10px 0;
+
+            & *{
+                padding: 0;
+                margin: 0;
+            }
+        }
+
+        & .message-content-actions{
+            color: var(--silver);
+            display: flex;
+            gap: 20px;
+            font-weight: lighter;
+
+            & i{
+                transition: .5s;
+                cursor: pointer;
+            }
+        }
+
+        & .message-content-actions i:hover{
+            color: var(--gray);
+        }
+    }
+
+    & #comment-post{
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+        padding: 0 30px 30px 30px;
+        margin: 0;
+        flex-direction: row;
+
+        & .profile-image{
+            width: 40px;
+        }
+
+        & form{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            border-radius: 25px;
+            background-color: var(--silver);
+
+            & input{
+                background: none;
+                border: none;
+                outline: none;
+                width: 80%;
+                border-right: 1px solid var(--gray);
+            }
+
+            & .extras{
+                display: flex;
+                gap: 18px;
+                width: 20%;
+                align-items: center;
+                justify-content: center;
+                font-size: 1.3em;
+                color: var(--gray);
+
+                & button{
+                    border: none;
+                    background: none;
+                    padding: 0;
+                }
+
+                & i{
+                    cursor: pointer;
+                }
             }
         }
     }
