--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,31 +9,7 @@
     <title>WorkConnect</title>
 </head>
 <body>
-    <aside>
-        <nav>
-            <a href="{% url 'index' %}">
-                <img src="{% static 'img/logo.png' %}">
-            </a>
-            <div class="content">
-                <div class="first-group">
-                    <div id="notification-box" class="aside-nav-box">
-                        <i class="fa-solid fa-bell"></i>
-                    </div>
-                    <a class="aside-nav-box" href="#">
-                        <i class="fa-solid fa-comment-dots"></i>
-                    </a>
-                    <a class="aside-nav-box" href="#">
-                        <i class="fa-solid fa-calendar"></i>
-                    </a>
-                </div>
-                <div class="last-group">
-                    <a class="aside-nav-box" href="{% url 'profile' %}">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </aside>
+    {% include 'acessories/aside-menu.html' %}
     <div class="container">
         <div class="row header-top">
             <div class="col-8">
@@ -57,6 +33,7 @@
         <span><b>WorkConnect</b></span>
         <p>Breve mais informações</p>
     </footer>
+    <script src="{% static 'scripts/aside-script.js' %}"></script>
     <script src="https://kit.fontawesome.com/c6e63ec5a7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
