--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <div class="row">
-        <div class="col-8">
+        <div class="col-lg-8 col-md-12 col-sm-12">
             <div class="row">
                 <div class="col">
                     <section id="updates-notification">
