--- a/core/templates/acessories/aside-menu.html
+++ b/core/templates/acessories/aside-menu.html
@@ -12,6 +12,9 @@
                 <a class="aside-nav-box" href="{% url 'chat' %}">
                     <i class="fa-solid fa-comment-dots"></i>
                 </a>
+                <a class="aside-nav-box" href="{% url 'group' %}">
+                    <i class="fa-solid fa-people-group"></i>
+                </a>
                 <a class="aside-nav-box" href="#">
                     <i class="fa-solid fa-calendar"></i>
                 </a>
