--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row header-top">
             <div class="col-8">
-                <h2>Nome Empresa</h2>
+                <h2>{{ organization.nome }}</h2>
             </div>
             <div class="col">
                 <form id="search-form">
@@ -29,10 +29,10 @@
         </div>
     {% block content %}
     {% endblock %}
-    <footer>
+    <!-- <footer>
         <span><b>WorkConnect</b></span>
         <p>Breve mais informações</p>
-    </footer>
+    </footer> -->
     <script src="{% static 'scripts/aside-script.js' %}"></script>
     <script src="https://kit.fontawesome.com/c6e63ec5a7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
