--- a/core/templates/groups.html
+++ b/core/templates/groups.html
@@ -30,6 +30,9 @@
             </div>
         </div>
     </div>
+    <div id="add-icon" onclick="openModal()">
+        <i class="fa-solid fa-plus"></i>
+    </div>
     <div class="modal-box">
         <div class="content">
             <h3>Criar novo grupo</h3>
@@ -39,6 +42,9 @@
                 <button type="submit">Criar Grupo</button>
             </form>
         </div>
+    </div>
+    <div id="fade-background">
+        <span></span>
     </div>
 <!--End Main Container-->
 </div>
