--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,8 +33,10 @@
         <span><b>WorkConnect</b></span>
         <p>Breve mais informações</p>
     </footer> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'scripts/aside-script.js' %}"></script>
     <script src="{% static 'scripts/modal-script.js' %}"></script>
+    <script src="{% static 'scripts/post-like.js' %}"></script>
     <script src="https://kit.fontawesome.com/c6e63ec5a7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
