Subindo melhorias nas telas de grupo / Criando e ajustando front do Profile/ ajuste persisntência de sessão

--- a/core/templates/acessories/post.html
+++ b/core/templates/acessories/post.html
@@ -12,10 +12,10 @@
             </div>
         </div>
         <div class="header-options">
+            <span>{{ post.hourCounter }}</span>
             <div id="more-options">
                 <i class="fa-solid fa-ellipsis"></i>
             </div>
-            <span><b>{{ post.hourCounter }}</b> h</span>
         </div>
     </div>
     <div class="content-post">
