--- a/core/static/style/style.css
+++ b/core/static/style/style.css
@@ -625,6 +625,33 @@ aside{
             }
         }
     }
+
+    & #profile-actions{
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-between;
+
+        & button{
+            background-color: var(--light-blue);
+            color: #fff;
+            font-weight: bolder;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+        
+        & #logout-btn{
+            background-color: rgba(0,0,0,0);
+            color: var(--red);
+            border: 2px solid var(--red);
+            transition: .2s;
+        }
+
+        & #logout-btn:hover{
+            background-color: var(--red);
+            color: #fff;
+        }
+    }
 }
 
 #chat-peoples{
@@ -897,6 +924,7 @@ aside{
     justify-content: center;
     border-radius: 25px 25px 0 0;
     margin-bottom: 30px;
+    background-color: var(--gray);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
